fix some pmd/findbugs issues
git-svn-id: https://svn.code.sf.net/p/jackcess/code/jackcess/trunk@172 f203690c-595d-4dc9-a70b-905162fa7fd2